tests/samples/negative/expressions/return_type_mismatch.ax
module return_type_mismatch;

fn main() -> i32 {
    return true;
}
